# cert-intelligence-platform

./: .coverage  .env.example  API_CONTRACT.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: backend-ci.yml  dashboard-ci.yml  docker.yml  security.yml
dashboard/: .env.example  BUILD_NOTES.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/audit/: page.tsx
dashboard/app/certificates/: page.tsx
dashboard/app/dlq/: page.tsx
dashboard/app/heatmap/: page.tsx
dashboard/app/orphans/: page.tsx
dashboard/components/: AppContext.tsx  CertDrawer.tsx  Charts.tsx  Footer.tsx  HeatmapGrid.tsx  KpiCard.tsx  Sidebar.tsx  Topbar.tsx  primitives.tsx
dashboard/lib/: api.ts  mockData.ts  types.ts  ui.ts  usePoll.ts
data/: cip.db
playbooks/: deploy_cert.yml
scripts/: bootstrap.sh  run_api.sh  run_dashboard.sh
src/cert_intelligence_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/cip/: __init__.py  app.py  config.py  db.py  scheduler.py
src/cip/agents/: __init__.py  cmdb_agent.py  jira_agent.py  llm.py  notify_agent.py  orchestrator.py  renewal_agent.py  tools.py
src/cip/api/: dashboard.py  webhooks.py  ws.py
src/cip/audit/: __init__.py  log.py
src/cip/engine/: __init__.py  bus.py  dedup.py  renew.py  resolver.py  scanner.py  scorer.py
src/cip/execution/: __init__.py  saga.py  (+4 more)
tests/: conftest.py  test_certificate_model.py  test_dedup.py  test_dedup_guard.py  test_idempotency.py  test_scorer.py  test_tool_scopes.py
(+17 files in other folders)
