[project]
name = "cert-intelligence-platform"
version = "1.0.0"
description = "Automated certificate lifecycle platform: Venafi -> Intelligence Engine -> AI Agents -> Jira / Teams / Dashboard / CMDB"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "cryptography>=42.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]
redis = ["redis>=5.0"]
openai = ["openai>=1.30"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["cip.engine.scorer", "cip.engine.dedup"]

[tool.ruff]
line-length = 100
target-version = "py311"
